style.css
body {

    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

.container{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    
    
}


header { 
    display: flex;
    flex-direction: column;
    background-color: #1F2937;
    padding: 5px;
    border-radius: 5px;
    
}

footer {
    display: flex;
    align-items: center;
    justify-content: center;
    color: #E5E7EB;
    background-color: #1F2937;
    padding: 1em 0;
}


main {
    display: flex;
    flex: 1;
    flex-direction: column;
}

.lower {
    background-color: #E5E7EB;
    font-size: 36px;
    font-style: italic;
    font-weight: lighter;
    color: #1F2937;
    padding: 1em 5em;
}

.feature {
    border: 3px #3882F6 solid;
    display: flex;
    border-radius: 5px;
    
}

.banner {
    background-color: #3882F6;
    color: #E5E7EB;
    border-radius: 3px;
    padding: 2em;
    margin: 2em 5em;
    display: flex;
    justify-content: space-between;
}
.banner-btn {
    display: flex;
    flex-wrap: nowrap;
}

.cards { 
    display: flex;
    justify-content: space-between;
    align-items: baseline;
    gap: 1em;
    

}


.lower {
    display: flex;
    flex-direction: column;
}

.author {
    display: flex;
    justify-content: flex-end;
}
.mid-title {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 36px;
    font-weight: 900;
    color: #3882F6;

}

.text {
    display: flex;
    justify-content: center;
    align-items: center;

}


.top { 
    display: flex;
    justify-content: space-between;
    align-items: center;
 }

 .bottom { 
    display: flex;
    justify-content: space-evenly;
 }
 .bottom-left {
    display: flex;
    flex-direction: column;
    padding-left: 2em ;
    align-items: center;
    justify-content: space-between;
 }

 .header-img {
    display: flex;
 }

 .logo {
    padding-left: 2em;
 }

 a {
     text-decoration: none;
     color:#E5E7EB;
     padding-right:2em
}


 ul {
    display: flex;
    padding-right: 1em;
    list-style-type: none;
 }
 

.title{
color: #F9FAF8;
font-size: 48px;
font-weight: 900;
}


.paragraph {
    color: #E5E7EB;
    font-size: 18px;
}

img {
    width: 200px;
    height: auto;
}
button {
    background-color: #3882F6;
    color: #E5E7EB;
    border-radius: 9px;
    padding: 1em 2em;
    font-weight: 600;
    
}

